--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -12,7 +12,7 @@
     <p class="mt-3"><%= blog.body %></p>
   </div>
   <div class="container mt-4">
-    <img src="<%= blog.createdBy.profileImageURL %>" width="50px"/><%= blog.createdBy.fullName %>
+    <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" width="50px"/>
   </div>
   <div class="container mt-3">
     <h1>Comments (<%= comments.length %>)</h1>
@@ -28,7 +28,6 @@
    <% comments.forEach(comment => { %>
      <div>
         <img src="<%= comment.createdBy.profileImageURL %>" width="50px"/>
-        <%= comment.createdBy.fullName %>
          <pre><%= comment.content %></pre>
      </div>
    <% }) %>
