--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
- <%- include('./partials/head') %>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+  crossorigin="anonymous">
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';">
+<meta charset="utf-8" />
+ <link rel="icon" href="/favicon.ico" />
  <title>Signin</title>
 </head>
 <body>
-<%- include('./partials/nav') %>
+<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Blogify</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <% if(locals.user) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/blog/add-new">Add blog</a>
+          </li>
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Bruce Lee
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
+          </ul>
+        </li>
+        <% } else {%>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/signup">Create Account</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/signin">Signin</a>
+          </li>
+        <% } %>
+
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<% if(locals.error){ %>
+<div class="container mt-4">
+  <div class="alert alert-danger" role="alert">
+     <%= locals.error %>
+  </div>
+</div>
+<% } %>
  <div class="container mt-4">
   <form action="/user/signin" method="post">
   <div class="mb-3">
@@ -20,6 +70,10 @@
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
  </div>
-<%- include('./partials/scripts') %>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+  crossorigin="anonymous">
+</script>
 </body>
 </html>
